--- a/front/nis2.html
+++ b/front/nis2.html
@@ -37,11 +37,11 @@ titreHtml: 'Votre entité est régulée NIS2 ? | MesServicesCyber'
 
 <section class="sommaire">
   <div class="contenu-section">
-    <div class="groupe-boutons">
+    <div class="controle-segmente">
       {% for action in site.data.nis2 %}
       <a
         href="#{{action[0]}}"
-        class="{%if forloop.first%}actif{% endif %} bouton secondaire"
+        class="{%if forloop.first%}actif{% endif %} bouton-segmente"
         >{{action[1].titre}}</a
       >
       {% endfor %}
