--- a/front/resultats-session-groupe.html
+++ b/front/resultats-session-groupe.html
@@ -4,4 +4,29 @@ layout: defaut
 titreHtml: 'Résultats de session de groupe | MesServicesCyber'
 ---
 
-Bientôt !
+<script type="module" crossorigin src="/lib-svelte/dist/assets/fil-ariane.js"></script>
+
+<script type="application/json" id="donnees">
+  {
+    "branche": {
+      "nom": "Tester votre maturité cyber",
+      "lien": "/test-maturite/"
+    },
+    "feuille": "Session de groupe"
+  }
+</script>
+
+<section class="chapeau fond-sombre">
+  <div class="contenu-section">
+    <div id="fil-ariane"></div>
+    <h1>Résultat de maturité cyber</h1>
+    <p>
+      Ce résultat nous permet de vous guider et de vous fournir les informations et les outils essentiels pour agir sur
+      votre maturité cyber.
+    </p>
+  </div>
+</section>
+
+<script type="module" crossorigin src="/lib-svelte/dist/assets/resultats-session-groupe.js"></script>
+
+<div id="resultats-session-groupe"></div>
