--- a/front/inscription.html
+++ b/front/inscription.html
@@ -1,7 +1,8 @@
 ---
-layout: connexion
+layout: defaut
 permalink: /inscription/
 titreHtml: 'Créez votre compte | MesServicesCyber'
+styles: /assets/styles/connexion.css
 ---
 
 <section class="connexion">
