--- a/front/promouvoir-msc.html
+++ b/front/promouvoir-msc.html
@@ -1,5 +1,5 @@
 ---
-layout: article-crisp
+layout: defaut
 permalink: /promouvoir-messervicescyber/
 titreHtml: '🚀 Promouvoir MesServicesCyber | MesServicesCyber'
 ---
