--- a/front/promouvoir-msc.html
+++ b/front/promouvoir-msc.html
@@ -7,7 +7,13 @@ titreHtml: '🚀 Promouvoir MesServicesCyber | MesServicesCyber'
 <script
   type="module"
   crossorigin
-  src="/lib-svelte/dist/assets/promouvoir-msc.js"
+  src="/lib-svelte/dist/assets/page-crisp.js"
 ></script>
 
-<div id="promouvoir-msc"></div>
+<script type="application/json" id="donnees-page-crisp">
+  {
+    "clePageCrisp": "promouvoir_msc"
+  }
+</script>
+
+<div id="page-crisp"></div>
