Modifie un CTA de la page d'accueil

--- a/front/index.html
+++ b/front/index.html
@@ -17,9 +17,9 @@ titreHtml: 'Accueil | MesServicesCyber'
       de la sécurité des systèmes d'information et ses partenaires.
     </p>
     <div class="boutons">
-      <a href="/nis2/" class="bouton primaire">
-        <span class="court">Découvrir les services NIS2</span>
-        <span class="long">Découvrir les services adaptés à NIS2</span>
+      <a href="/cyberdepart/" class="bouton primaire">
+        <span class="court">Demander un diagnostic cyber</span>
+        <span class="long">Demander un diagnostic cyber</span>
       </a>
       <a href="/catalogue/" class="bouton secondaire">
         <span class="court">Accéder au catalogue</span>
