--- a/front/favoris-partages.html
+++ b/front/favoris-partages.html
@@ -2,6 +2,8 @@
 layout: defaut
 permalink: /favoris-partages/
 titreHtml: 'Favoris partagés | MesServicesCyber'
+styles:
+- /assets/styles/carte-item.css
 ---
 
 {% include script-donnees-json.html %}
