Stylise la page de maintenance

--- a/front/maintenance.html
+++ b/front/maintenance.html
@@ -1,10 +1,14 @@
 ---
 layout: defaut
+styles:  /assets/styles/maintenance.css
+titreHtml: 'Maintenance | MesServicesCyber'
 ---
 
-<div class="container">
-  <h1>503</h1>
+<section>
+  <div class="contenu-section maintenance">
+    <h2>MesServicesCyber est actuellement en maintenance.</h2>
 
-  <p><strong>Page maintenance</strong></p>
-  <p>En maintenance</p>
-</div>
+    <p>Nous nous excusons pour la gêne occasionnée. Veuillez réessayer d’ici quelques minutes.</p>
+    <img src="/assets/images/maintenance.svg">
+  </div>
+</section>
