[CORRECTION] Corrige le lien vers la demande de diagnostic cyber

--- a/front/parcours-debuter.html
+++ b/front/parcours-debuter.html
@@ -34,7 +34,7 @@ titreHtml: 'Cybersécurité : se lancer ! | MesServicesCyber'
     </p>
     <div class="cta">
       <p>Bénéficier d’un diagnostic cyber gratuit pour renforcer rapidement la cybersécurité de votre organisation.</p>
-      <a href="/nis2" class="bouton primaire">Demander mon diagnostic cyber</a>
+      <a href="/cyberdepart" class="bouton primaire">Demander mon diagnostic cyber</a>
     </div>
   </div>
 </section>
