[ACCUEIL] Remplace les boutons primaires par ceux de l’UI kit

--- a/front/index.html
+++ b/front/index.html
@@ -17,10 +17,8 @@ titreHtml: 'Accueil | MesServicesCyber'
       de la sécurité des systèmes d'information et ses partenaires.
     </p>
     <div class="boutons">
-      <a href="/cyberdepart/" class="bouton primaire">
-        <span class="court">Demander un diagnostic cyber</span>
-        <span class="long">Demander un diagnostic cyber</span>
-      </a>
+      <lab-anssi-lien href="/cyberdepart/" apparence="bouton" variante="primaire" taille="lg"
+                      titre="Demander un diagnostic cyber"></lab-anssi-lien>
       <a href="/catalogue/" class="bouton secondaire">
         <span class="court">Accéder au catalogue</span>
         <span class="long"> Découvrir le catalogue complet </span>
@@ -35,7 +33,8 @@ titreHtml: 'Accueil | MesServicesCyber'
 
     <div id="extrait"></div>
 
-    <a href="/catalogue" class="bouton primaire">Accédez à plus de services</a>
+    <lab-anssi-lien href="/catalogue" apparence="bouton" variante="primaire" taille="lg"
+                    titre="Accédez à plus de services"></lab-anssi-lien>
   </div>
 </section>
 
@@ -81,9 +80,8 @@ titreHtml: 'Accueil | MesServicesCyber'
         </div>
       </div>
     </div>
-    <a href="/connexion" class="bouton primaire"
-    >Connectez-vous sur MesServicesCyber</a
-    >
+    <lab-anssi-lien href="/connexion" apparence="bouton" variante="primaire" taille="lg"
+                    titre="Connectez-vous sur MesServicesCyber"></lab-anssi-lien>
   </div>
 </section>
 
@@ -110,7 +108,8 @@ titreHtml: 'Accueil | MesServicesCyber'
         </ul>
       </div>
     </div>
-    <a href="https://tally.so/r/wa6o22" target="_blank" class="bouton primaire">Rejoindre la communauté</a>
+    <lab-anssi-lien href="https://tally.so/r/wa6o22" cible="_blank" variante="primaire" apparence="bouton" taille="lg"
+                    titre="Rejoindre la communauté"></lab-anssi-lien>
   </div>
 </section>
 
