Remplace la page vide des statistiques par des tuiles

--- a/front/statistiques.html
+++ b/front/statistiques.html
@@ -2,14 +2,14 @@
 layout: page-statique
 permalink: /statistiques/
 titreHtml: 'Statistiques | MesServicesCyber'
-titrePageStatique: 'Statistiques'
+titrePageStatique: 'Nos statistiques'
 sousTitrePageStatique: "L'impact de MesServicesCyber en quelques chiffres"
 ---
 
-<div class="contenu-vide">
-  <img
-    src="/assets/images/illustration-dragon-aucun-resultat.svg"
-    alt="Pas encore de résultats"
-  />
-  <h2>Les premiers résultats arrivent bientôt !</h2>
-</div>
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/statistiques.js"
+></script>
+
+<div id="statistiques"></div>
