--- a/front/statistiques.html
+++ b/front/statistiques.html
@@ -1,9 +1,7 @@
 ---
-layout: page-statique
+layout: defaut
 permalink: /statistiques/
 titreHtml: 'Statistiques | MesServicesCyber'
-titrePageStatique: 'Nos statistiques'
-sousTitrePageStatique: "L'impact de MesServicesCyber en quelques chiffres"
 ---
 
 <script
@@ -12,4 +10,17 @@ sousTitrePageStatique: "L'impact de MesServicesCyber en quelques chiffres"
   src="/lib-svelte/dist/assets/statistiques.js"
 ></script>
 
-<div id="statistiques"></div>
+<section class="chapeau fond-sombre">
+  <div class="contenu-section">
+    <h1>Nos statistiques</h1>
+    <p>L'impact de MesServicesCyber en quelques chiffres</p>
+  </div>
+</section>
+
+<section class="statistiques">
+  <div class="contenu-section">
+    <div id="statistiques"></div>
+  </div>
+</section>
+
+
