Ajoute les contacts sur la page d’accessibilité

--- a/front/accessibilite.html
+++ b/front/accessibilite.html
@@ -3,7 +3,9 @@ layout: page-statique
 permalink: /accessibilite/
 titreHtml: "Déclaration d'accessibilité | MesServicesCyber"
 titrePageStatique: "Déclaration d'accessibilité"
-sousTitrePageStatique: 'Cette déclaration d’accessibilité a été créé le 5 mars 2025 grâce au <a class="lien" href="https://betagouv.github.io/a11y-generateur-declaration/">Générateur de Déclaration d’Accessibilité de BetaGouv</a>.'
+sousTitrePageStatique: 'Cette déclaration d’accessibilité a été créé le 5 mars 2025 grâce au <a class="lien"
+                                                                                                href="https://betagouv.github.io/a11y-generateur-declaration/">Générateur
+  de Déclaration d’Accessibilité de BetaGouv</a>.'
 ---
 
 <p>
@@ -12,7 +14,7 @@ sousTitrePageStatique: 'Cette déclaration d’accessibilité a été créé le 
 </p>
 <p>
   Cette déclaration d&#39;accessibilité s&#39;applique à
-  <a href="https://messervices.cyber.gouv.fr/">ce service</a>.
+  <lab-anssi-lien href="https://messervices.cyber.gouv.fr/" titre="ce service" apparence="lien-texte"></lab-anssi-lien>.
 </p>
 <h2>État de conformité</h2>
 <p>
@@ -31,18 +33,31 @@ sousTitrePageStatique: 'Cette déclaration d’accessibilité a été créé le 
 <ul>
   <li>
     Écrire un message au
-    <a href="https://formulaire.defenseurdesdroits.fr/" target="_blank"
-      >Défenseur des droits</a
+    <lab-anssi-lien href="https://formulaire.defenseurdesdroits.fr/" cible="_blank" titre="Défenseur des droits"
+                    apparence="lien-texte"
+    ></lab-anssi-lien
     >
   </li>
   <li>
     Contacter
-    <a href="https://www.defenseurdesdroits.fr/saisir/delegues" target="_blank"
-      >le délégué du Défenseur des droits dans votre région</a
+    <lab-anssi-lien href="https://www.defenseurdesdroits.fr/saisir/delegues" cible="_blank"
+                    titre="le délégué du Défenseur des droits dans votre région" apparence="lien-texte"
+    ></lab-anssi-lien
     >
   </li>
   <li>
     Envoyer un courrier par la poste (gratuit, ne pas mettre de timbre) :<br />Défenseur
     des droits<br />Libre réponse 71120 75342 Paris CEDEX 07
+  </li>
+</ul>
+<h2>Contact</h2>
+<ul>
+  <li>Mail :
+    <lab-anssi-lien href="mailto:contact@messervicescyber.beta.gouv.fr" titre="contact@messervicescyber.beta.gouv.fr"
+                    apparence="lien-texte"></lab-anssi-lien>
+  </li>
+  <li>
+    <lab-anssi-lien href="https://aide.messervices.cyber.gouv.fr/fr/?chat=ouvert" titre="Chat en ligne" cible="_blank"
+                    apparence="lien-texte"></lab-anssi-lien>
   </li>
 </ul>
