Supprime la mention « À venir »
...qui indique que la comparaison sera bientôt disponible. Elle l’est.

--- a/front/index.html
+++ b/front/index.html
@@ -60,7 +60,7 @@ titreHtml: 'Accueil | MesServicesCyber'
           <h2>Comparez-vous avec d’autres entités</h2>
           <p>
             Comparez votre organisation à d’autres similaires à la vôtre pour
-            identifier vos atouts et vos axes d'amélioration. (À venir)
+            identifier vos atouts et vos axes d'amélioration.
           </p>
         </div>
         <div class="fonction-msc couleur1">
