Ajoute un bloc sur les Bizdev
...et permet de rejoindre un webinaire

--- a/front/index.html
+++ b/front/index.html
@@ -87,6 +87,20 @@ titreHtml: 'Accueil | MesServicesCyber'
 
 {% include encart-cyberdepart.html fond='sombre' %}
 
+<section class="equipe-bizdev">
+  <div class="contenu-section">
+    <div class="photos">
+      <img src="/assets/images/floriane-bizdev.jpg" alt="Photo de Floriane Gallego" />
+      <img src="/assets/images/pierre-bizdev.jpg" alt="Photo de Pierre Estagnasié" />
+    </div>
+    <h2>Notre équipe est à votre écoute</h2>
+    <p>Participer à un webinaire collectif de 45 minutes pour en savoir plus sur MesServicesCyber, le test de maturité et le diagnostic cyber afin de mieux protéger votre entité des cyberattaques.</p>
+    <lab-anssi-lien href="https://app.livestorm.co/anssi/webinaire-cyberdepart" variante="primaire" apparence="bouton" taille="lg"
+                    cible="_blank" titre="Assister au webinaire"></lab-anssi-lien>
+
+  </div>
+</section>
+
 <section class="communaute-msc">
   <div class="contenu-section">
     <h1>Rejoignez la communauté MesServicesCyber et Innovation ANSSI&nbsp;!</h1>
