[PRESTAS] Ajoute la carte des PACS

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -23,5 +23,33 @@ styles:
   </div>
 </section>
 <section class="prestataires-qualifies">
-  <div class="contenu-section"></div>
+  <div class="contenu-section">
+    <a
+      class="carte"
+      target="_blank"
+      href="https://cyber.gouv.fr/prestataires-daccompagnement-et-de-conseil-en-securite-des-systemes-dinformation-pacs"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>
+            Assistance et conseil en sécurité des systèmes d'information (PACS)
+          </h6>
+        </div>
+        <p class="description">
+          Les prestataires d'assistance et de conseil en sécurité des systèmes
+          d'information (PACS) accompagnent un commanditaire dans la démarche de
+          sécurisation de son système d’information et de son maintien en
+          condition de sécurité.
+        </p>
+        <div class="labels">
+          <span>cyber.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
+  </div>
 </section>
