[PRESTAS] Ajoute la carte des PDIS

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -79,5 +79,30 @@ styles:
         </div>
       </div>
     </a>
+    <a
+      class="carte"
+      target="_blank"
+      href="https://cyber.gouv.fr/prestataires-de-detection-dincidents-de-securite-pdis"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>Détection des incidents de sécurité (PDIS)</h6>
+        </div>
+        <p class="description">
+          Les prestataires de détection des incidents de sécurité (PDIS)
+          supervisent en temps réel les activités au sein d'un système
+          d'information pour détecter toute activité anormale ou potentiellement
+          malveillante.
+        </p>
+        <div class="labels">
+          <span>cyber.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
   </div>
 </section>
