[PRESTAS] Ajoute la carte des experts cyber

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -104,5 +104,29 @@ styles:
         </div>
       </div>
     </a>
+    <a
+      class="carte"
+      target="_blank"
+      href="https://www.cybermalveillance.gouv.fr/tous-nos-contenus/label-expertcyber/decouvrir-le-label-expertcyber"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>Expert cyber</h6>
+        </div>
+        <p class="description">
+          Le label ExpertCyber permet de reconnaître l’expertise des
+          prestataires en cybersécurité assurant des prestations de
+          sécurisation, de maintenance et d’assistance en cas d’incident.
+        </p>
+        <div class="labels">
+          <span>cybermalveillance.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
   </div>
 </section>
