[PRESTAS] Ajoute la carte SecNumCloud

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -128,5 +128,31 @@ styles:
         </div>
       </div>
     </a>
+    <a
+      class="carte"
+      target="_blank"
+      href="https://cyber.gouv.fr/prestataires-de-services-dinformatique-en-nuage-secnumcloud"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>
+            Prestataires de services d’informatique en nuage (SecNumCloud)
+          </h6>
+        </div>
+        <p class="description">
+          Les services d'informatique en nuage (« cloud computing ») permettent
+          l’accès via un réseau à des ressources informatiques pouvant être
+          partagées et attribuées à la demande.
+        </p>
+        <div class="labels">
+          <span>cyber.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
   </div>
 </section>
