--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -154,5 +154,30 @@ styles:
         </div>
       </div>
     </a>
+    <a
+      class="carte"
+      target="_blank"
+      href="https://cyber.gouv.fr/decouvrir-les-solutions-qualifiees"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>Audit de la sécurité des systèmes d'information (PASSI)</h6>
+        </div>
+        <p class="description">
+          Les prestataires d'audit de la sécurité des systèmes d'information
+          (PASSI) évaluent de manière impartiale e objective qu'un système
+          d'information satisfait aux critères d'audit sélectionnés par le
+          commanditaire.
+        </p>
+        <div class="labels">
+          <span>cyber.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
   </div>
 </section>
