[PRESTAS] Ajoute la carte des services de confiance

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -179,5 +179,31 @@ styles:
         </div>
       </div>
     </a>
+    <a
+      class="carte"
+      target="_blank"
+      href="https://cyber.gouv.fr/decouvrir-les-solutions-qualifiees"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>Prestataires de services de confiance numériques</h6>
+        </div>
+        <p class="description">
+          Les prestataires de confiance numérique qualifiés par l’ANSSI offrent
+          des services certifiés en cybersécurité et confiance numérique,
+          conformes aux exigences nationales. Leur qualification atteste d’un
+          haut niveau d’expertise, de fiabilité et de conformité, garantissant
+          aux organisations des prestations sécurisées et reconnues par l’État
+        </p>
+        <div class="labels">
+          <span>cyber.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
   </div>
 </section>
