[PRESTAS] Ajoute la carte des produits qualifiés

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -205,5 +205,31 @@ styles:
         </div>
       </div>
     </a>
+    <a
+      class="carte"
+      target="_blank"
+      href="https://cyber.gouv.fr/trouver-un-produitservice-de-securite-evalue"
+    >
+      <div class="contenu">
+        <div class="en-tete">
+          <h6>Produits qualifiés</h6>
+        </div>
+        <p class="description">
+          Les produits et services qualifiés par l’ANSSI (solutions de sécurité,
+          cloud, équipements, etc.) répondent à des critères stricts de
+          robustesse et de confiance. Cette qualification garantit aux
+          organisations qu’ils sont évalués, fiables et adaptés aux besoins de
+          sécurité nationale et des secteurs sensibles.
+        </p>
+        <div class="labels">
+          <span>cyber.gouv.fr</span>
+          <img
+            alt="Ouvrir dans un nouvel onglet"
+            src="/assets/images/icone-lien-externe.svg"
+            title="Ouvrir dans un nouvel onglet"
+          />
+        </div>
+      </div>
+    </a>
   </div>
 </section>
