[NAVIGATION] Renomme le menu 'Tester votre maturité cyber' en 'Test de maturité cyber'

--- a/front/resultats-session-groupe.html
+++ b/front/resultats-session-groupe.html
@@ -4,12 +4,16 @@ layout: defaut
 titreHtml: 'Résultats de session de groupe | MesServicesCyber'
 ---
 
-<script type="module" crossorigin src="/lib-svelte/dist/assets/fil-ariane.js"></script>
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/fil-ariane.js"
+></script>
 
 <script type="application/json" id="donnees">
   {
     "branche": {
-      "nom": "Tester votre maturité cyber",
+      "nom": "Test de maturité cyber",
       "lien": "/test-maturite/"
     },
     "feuille": "Session de groupe"
@@ -21,12 +25,16 @@ titreHtml: 'Résultats de session de groupe | MesServicesCyber'
     <div id="fil-ariane"></div>
     <h1>Résultat de maturité cyber</h1>
     <p>
-      Ce résultat nous permet de vous guider et de vous fournir les informations et les outils essentiels pour agir sur
-      votre maturité cyber.
+      Ce résultat nous permet de vous guider et de vous fournir les informations
+      et les outils essentiels pour agir sur votre maturité cyber.
     </p>
   </div>
 </section>
 
-<script type="module" crossorigin src="/lib-svelte/dist/assets/resultats-session-groupe.js"></script>
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/resultats-session-groupe.js"
+></script>
 
 <div id="resultats-session-groupe"></div>
