[PRESTAS] Reformule 'qualifié' en 'labellisé'

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -12,13 +12,13 @@ styles:
     <div class="fil-ariane">
       <a href="/" class="lien">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg" alt="" /></span>
-      <span>Prestataires qualifiés par l’ANSSI</span>
+      <span>Prestataires labellisés</span>
     </div>
-    <h1>Prestataires qualifiés par l’ANSSI</h1>
+    <h1>Prestataires labellisés</h1>
     <p>
-      Tous les prestataires de confiance et produits/services qualifiés par
-      l'ANSSI afin de vous accompagner sur vos différents enjeux cyber : audits,
-      homologations, réponses à incidents...
+      Tous les prestataires de confiance et produits/services labellisés afin de
+      vous accompagner sur vos différents enjeux cyber : audits, homologations,
+      réponses à incidents...
     </p>
   </div>
 </section>
