[SOIN] Change le terme 'qualifies' en 'labellises'
...afin d'être cohérent avec le nouveau vocabulaire 'prestataires labellisés'

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -1,10 +1,10 @@
 ---
 layout: defaut
-permalink: /prestataires-qualifies/
-titreHtml: 'Prestataires qualifiés | MesServicesCyber'
+permalink: /prestataires-labellises/
+titreHtml: 'Prestataires labellisés | MesServicesCyber'
 styles:
   - /assets/styles/carte-item.css
-  - /assets/styles/prestataires-qualifies.css
+  - /assets/styles/prestataires-labellises.css
 ---
 
 <section class="chapeau fond-sombre">
@@ -22,7 +22,7 @@ styles:
     </p>
   </div>
 </section>
-<section class="prestataires-qualifies">
+<section class="prestataires-labellises">
   <div class="contenu-section">
     <a
       class="carte"
