Ajoute une mission de l’ANSSI

--- a/front/index.html
+++ b/front/index.html
@@ -138,8 +138,8 @@ titreHtml: 'Accueil | MesServicesCyber'
     </p>
     <p>
       Son action pour la protection de la Nation face aux cyberattaques se
-      traduit en quatre grandes missions : défendre, connaître, partager,
-      accompagner.
+      traduit en cinq grandes missions : défendre, connaître, partager,
+      accompagner, réguler.
     </p>
     <a href="https://cyber.gouv.fr/" target="_blank" class="bouton secondaire">
       En savoir plus
