--- a/back/tests/ressources/factice.html
+++ b/back/tests/ressources/factice.html
@@ -1,5 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>titre</title>
+    <link nonce="%%NONCE%%" />
+  </head>
   <body>
     Ce fichier est utilisé pour renvoyer un contenu HTML factice pour les tests.
     <script nonce="%%NONCE%%"></script>
