modifie la home pour mettre en avant les guides

--- a/front/index.html
+++ b/front/index.html
@@ -13,15 +13,15 @@ titreHtml: 'Accueil | MesServicesCyber'
   <div class="contenu-section">
     <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
     <p>
-      Accédez aux services et ressources cyber proposés par l'Agence nationale
+      Accédez aux services, ressources cyber et guides proposés par l'Agence nationale
       de la sécurité des systèmes d'information et ses partenaires.
     </p>
     <div class="boutons">
       <lab-anssi-lien href="/cyberdepart/" apparence="bouton" variante="primaire" taille="lg"
                       titre="Demander un diagnostic cyber"></lab-anssi-lien>
-      <a href="/catalogue/" class="bouton secondaire">
+      <a href="/catalogue/#guides" class="bouton secondaire">
         <span class="court">Accéder au catalogue</span>
-        <span class="long"> Découvrir le catalogue complet </span>
+        <span class="long"> Découvrir le catalogue des guides </span>
       </a>
     </div>
   </div>
