Référence le nouveau webinaire
...dans la FAQ cyberdépart et dans l'accueil

--- a/front/index.html
+++ b/front/index.html
@@ -13,12 +13,17 @@ titreHtml: 'Accueil | MesServicesCyber'
   <div class="contenu-section">
     <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
     <p>
-      Accédez aux services, ressources cyber et guides proposés par l'Agence nationale
-      de la sécurité des systèmes d'information et ses partenaires.
+      Accédez aux services, ressources cyber et guides proposés par l'Agence
+      nationale de la sécurité des systèmes d'information et ses partenaires.
     </p>
     <div class="boutons">
-      <lab-anssi-lien href="/cyberdepart/" apparence="bouton" variante="primaire" taille="lg"
-                      titre="Demander un diagnostic cyber"></lab-anssi-lien>
+      <lab-anssi-lien
+        href="/cyberdepart/"
+        apparence="bouton"
+        variante="primaire"
+        taille="lg"
+        titre="Demander un diagnostic cyber"
+      ></lab-anssi-lien>
       <a href="/catalogue/#guides" class="bouton secondaire">
         <span class="court">Accéder au catalogue</span>
         <span class="long"> Découvrir le catalogue des guides </span>
@@ -33,8 +38,13 @@ titreHtml: 'Accueil | MesServicesCyber'
 
     <div id="extrait"></div>
 
-    <lab-anssi-lien href="/catalogue" apparence="bouton" variante="primaire" taille="lg"
-                    titre="Accédez à plus de services"></lab-anssi-lien>
+    <lab-anssi-lien
+      href="/catalogue"
+      apparence="bouton"
+      variante="primaire"
+      taille="lg"
+      titre="Accédez à plus de services"
+    ></lab-anssi-lien>
   </div>
 </section>
 
@@ -80,8 +90,13 @@ titreHtml: 'Accueil | MesServicesCyber'
         </div>
       </div>
     </div>
-    <lab-anssi-lien href="/connexion" apparence="bouton" variante="primaire" taille="lg"
-                    titre="Connectez-vous sur MesServicesCyber"></lab-anssi-lien>
+    <lab-anssi-lien
+      href="/connexion"
+      apparence="bouton"
+      variante="primaire"
+      taille="lg"
+      titre="Connectez-vous sur MesServicesCyber"
+    ></lab-anssi-lien>
   </div>
 </section>
 
@@ -90,40 +105,66 @@ titreHtml: 'Accueil | MesServicesCyber'
 <section class="equipe-bizdev">
   <div class="contenu-section">
     <div class="photos">
-      <img src="/assets/images/floriane-bizdev.jpg" alt="Photo de Floriane Gallego" />
-      <img src="/assets/images/pierre-bizdev.jpg" alt="Photo de Pierre Estagnasié" />
+      <img
+        src="/assets/images/floriane-bizdev.jpg"
+        alt="Photo de Floriane Gallego"
+      />
+      <img
+        src="/assets/images/pierre-bizdev.jpg"
+        alt="Photo de Pierre Estagnasié"
+      />
     </div>
     <h2>Notre équipe est à votre écoute</h2>
-    <p>Participer à un webinaire collectif de 45 minutes pour en savoir plus sur MesServicesCyber, le test de maturité et le diagnostic cyber afin de mieux protéger votre entité des cyberattaques.</p>
-    <lab-anssi-lien href="https://app.livestorm.co/anssi/webinaire-cyberdepart" variante="primaire" apparence="bouton" taille="lg"
-                    cible="_blank" titre="Assister au webinaire"></lab-anssi-lien>
-
+    <p>
+      Participer à un webinaire collectif de 45 minutes pour en savoir plus sur
+      MesServicesCyber, le test de maturité et le diagnostic cyber afin de mieux
+      protéger votre entité des cyberattaques.
+    </p>
+    <lab-anssi-lien
+      href="https://app.livestorm.co/lab-anssi/webinaire-cyberdepart"
+      variante="primaire"
+      apparence="bouton"
+      taille="lg"
+      cible="_blank"
+      titre="Assister au webinaire"
+    ></lab-anssi-lien>
   </div>
 </section>
 
 <section class="communaute-msc">
   <div class="contenu-section">
     <h1>Rejoignez la communauté MesServicesCyber et Innovation ANSSI&nbsp;!</h1>
-    <img src="assets/images/illustration-s-informer.svg" alt="Illustration niveau de maturité cyber" />
+    <img
+      src="assets/images/illustration-s-informer.svg"
+      alt="Illustration niveau de maturité cyber"
+    />
     <div class="contenu">
       <div>
         <p>En tant que <b>membre de la communauté</b>, vous pourrez :</p>
         <ul>
           <li>
-            <b>Échanger</b> directement avec vos pairs pour une collaboration facilitée.
+            <b>Échanger</b> directement avec vos pairs pour une collaboration
+            facilitée.
           </li>
           <li>
-            <b>Découvrir</b> en avant-première les nouvelles fonctionnalités à venir.
+            <b>Découvrir</b> en avant-première les nouvelles fonctionnalités à
+            venir.
           </li>
           <li>
-            <b>Participer</b> activement au développement de MesServicesCyber en nous partageant vos besoins et
-            suggestions d’amélioration.
+            <b>Participer</b> activement au développement de MesServicesCyber en
+            nous partageant vos besoins et suggestions d’amélioration.
           </li>
         </ul>
       </div>
     </div>
-    <lab-anssi-lien href="https://tally.so/r/wa6o22" cible="_blank" variante="primaire" apparence="bouton" taille="lg"
-                    titre="Rejoindre la communauté"></lab-anssi-lien>
+    <lab-anssi-lien
+      href="https://tally.so/r/wa6o22"
+      cible="_blank"
+      variante="primaire"
+      apparence="bouton"
+      taille="lg"
+      titre="Rejoindre la communauté"
+    ></lab-anssi-lien>
   </div>
 </section>
 
