Ajoute des styles DSFR pour les titres
...h2 et titre-alternatif-xs

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -7,7 +7,7 @@ permalink: /accueil2/
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <hgroup>
-      <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
+      <h1 class="alternatif-xs">Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
       <p>
         Agissez pour votre cybersécurité !
       </p>
