--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -8,20 +8,20 @@ permalink: /accueil2/
   <div class="contenu-section">
     <hgroup>
       <h1 class="alternatif-xs">Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
-      <p>
+      <p class="texte-chapo-xl">
         Agissez pour votre cybersécurité !
       </p>
     </hgroup>
-    <div class="boutons">
-      <lab-anssi-lien
-        href="/cyberdepart/"
-        apparence="bouton"
-        variante="primaire"
-        taille="lg"
-        titre="Demander un diagnostic gratuit"
-      ></lab-anssi-lien>
-      <p>Découvrez les guides, services et outils gratuits proposés par l'Agence nationale de la sécurité des systèmes
-        d'information et ses partenaires</p>
-    </div>
+    <lab-anssi-lien
+      href="/cyberdepart/"
+      apparence="bouton"
+      variante="primaire"
+      taille="lg"
+      titre="Demander un diagnostic gratuit"
+    ></lab-anssi-lien>
+    <img src="/assets/images/image-generique.avif">
+    <p class="texte-detail-sm">Découvrez les guides, services et outils gratuits proposés par l'Agence nationale de la
+      sécurité des systèmes
+      d'information et ses partenaires</p>
   </div>
 </section>
