[ACCUEIL v2] Affiche une section pour les organisations concernées

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -25,3 +25,42 @@ permalink: /accueil2/
       d'information et ses partenaires</p>
   </div>
 </section>
+
+<section class="organisations-concernees">
+  <div class="contenu-section">
+    <div class="toutes-organisations">
+      <hgroup>
+        <h2>Toutes les organisations sont concernées par le risque de cyberattaques</h2>
+        <p class="texte-article-lg">Les TPE/PME/ETI et collectivités sont les principales victimes des ransomwares ou
+          rançongiciels.</p>
+      </hgroup>
+      <img src="/assets/images/illustration-organisations-concernees.svg">
+      <lab-anssi-lien
+        class="texte-mention-xs"
+        href="https://cyber.gouv.fr/nous-connaitre/publications/panoramas-de-la-cybermenace/panorama-de-la-cybermenace-2024/"
+        apparence="lien-texte"
+        variante="primaire"
+        taille="sm"
+        titre="Panorama de la menace 2024, ANSSI"
+      ></lab-anssi-lien>
+    </div>
+    <div class="demande-diag">
+    </div>
+    <div class="acces-catalogue">
+      <h2>Accédez à un catalogue complet de ressources cyber proposées par l'ANSSI et ses partenaires</h2>
+      <div class="selections">
+        <p class="texte-detail-sm">Les sélections de l’ANSSI pour vous accompagner</p>
+        <div class="caroussel-selections">
+
+        </div>
+      </div>
+      <p class="texte-chapo-xl">
+        Explorez l’ensemble du catalogue et trouvez facilement <strong>les services et guides de l’ANSSI
+        adaptés</strong> aux besoins de
+        votre organisation.
+      </p>
+      <lab-anssi-lien href="/catalogue" apparence="bouton" variante="secondaire" taille="md"
+                      titre="Accéder au catalogue"></lab-anssi-lien>
+    </div>
+  </div>
+</section>
