[SOIN] Précise qu’on utilise des classes DSFR adaptées
... en ajoutant des nouvelles classes non standards (-ns). L’objectif est de laisser la place pour ajouter une feuille de style avec les règles du DSFR.

--- a/front/creation-compte.html
+++ b/front/creation-compte.html
@@ -12,8 +12,8 @@ titreHtml: 'Création de compte | MesServicesCyber'
 
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
-    <h1>Créez votre compte MesServices&ZeroWidthSpace;Cyber</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">Créez votre compte MesServices&ZeroWidthSpace;Cyber</h1>
+    <p class="texte-chapo-xl-ns">
       Accédez aux services et ressources cyber proposés par l’ANSSI et ses
       partenaires.
     </p>
