--- a/front/index.html
+++ b/front/index.html
@@ -12,7 +12,7 @@ titreHtml: 'Accueil | MesServicesCyber'
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
-    <p>
+    <p class="texte-chapo-xl-ns">
       Accédez aux services, ressources cyber et guides proposés par l'Agence
       nationale de la sécurité des systèmes d'information et ses partenaires.
     </p>
