--- a/front/niveaux-maturite.html
+++ b/front/niveaux-maturite.html
@@ -20,8 +20,8 @@ styles: /assets/styles/niveaux-maturite.css
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div id="fil-ariane"></div>
-    <h1>5 niveaux de maturité cyber</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">5 niveaux de maturité cyber</h1>
+    <p class="texte-chapo-xl-ns">
       Découvrez les différents niveaux de maturité cyber, de l’organisation en
       phase de découverte à celle atteignant une posture optimale.
     </p>
