--- a/front/parcours-approfondir.html
+++ b/front/parcours-approfondir.html
@@ -25,15 +25,15 @@ titreHtml: 'Cybersécurité : approfondir ! | MesServicesCyber'
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div id="fil-ariane"></div>
-    <h1>Les services pour approfondir</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">Les services pour approfondir</h1>
+    <p class="texte-chapo-xl-ns">
       Votre organisation a déjà mis en œuvre des premières actions pour
       renforcer sa cybersécurité et souhaite approfondir la démarche engagée ?
       Découvrez des services et ressources sélectionnés par l’ANSSI pour vous
       aider.
     </p>
     <div class="cta">
-      <p>Votre entité est régulée NIS2 ?</p>
+      <p class="texte-chapo-xl-ns">Votre entité est régulée NIS2 ?</p>
       <a href="/nis2" class="bouton primaire">Découvrir les services adaptés</a>
     </div>
   </div>
