--- a/front/parcours-debuter.html
+++ b/front/parcours-debuter.html
@@ -25,15 +25,15 @@ titreHtml: 'Cybersécurité : se lancer ! | MesServicesCyber'
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div id="fil-ariane"></div>
-    <h1>Les services pour se lancer</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">Les services pour se lancer</h1>
+    <p class="texte-chapo-xl-ns">
       Votre organisation souhaite mettre en œuvre des premières actions
       concrètes pour commencer à renforcer son niveau de cybersécurité.
       Découvrez des services et ressources sélectionnés par l’ANSSI pour vous
       aider.
     </p>
     <div class="cta">
-      <p>Bénéficier d’un diagnostic cyber gratuit pour renforcer rapidement la cybersécurité de votre organisation.</p>
+      <p class="texte-chapo-xl-ns">Bénéficier d’un diagnostic cyber gratuit pour renforcer rapidement la cybersécurité de votre organisation.</p>
       <a href="/cyberdepart" class="bouton primaire">Demander mon diagnostic cyber</a>
     </div>
   </div>
