--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -14,8 +14,8 @@ styles:
       <span><img src="/assets/images/icone-chevron-droite.svg" alt="" /></span>
       <span>Prestataires labellisés</span>
     </div>
-    <h1>Prestataires labellisés</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">Prestataires labellisés</h1>
+    <p class="texte-chapo-xl-ns">
       Tous les prestataires de confiance et produits/services labellisés afin de
       vous accompagner sur vos différents enjeux cyber : audits, homologations,
       réponses à incidents...
