--- a/front/resultats-session-groupe.html
+++ b/front/resultats-session-groupe.html
@@ -23,8 +23,8 @@ titreHtml: 'Résultats de session de groupe | MesServicesCyber'
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div id="fil-ariane"></div>
-    <h1>Résultat de maturité cyber</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">Résultat de maturité cyber</h1>
+    <p class="texte-chapo-xl-ns">
       Ce résultat nous permet de vous guider et de vous fournir les informations
       et les outils essentiels pour agir sur votre maturité cyber.
     </p>
