--- a/front/session-groupe.html
+++ b/front/session-groupe.html
@@ -23,8 +23,8 @@ titreHtml: 'Session de groupe | MesServicesCyber'
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div id="fil-ariane"></div>
-    <h1>Session de groupe</h1>
-    <p>Déterminez la maturité cyber de votre organisation en 5 minutes.</p>
+    <h1 class="alternatif-xs-ns">Session de groupe</h1>
+    <p class="texte-chapo-xl-ns">Déterminez la maturité cyber de votre organisation en 5 minutes.</p>
   </div>
 </section>
 
