--- a/front/statistiques.html
+++ b/front/statistiques.html
@@ -12,8 +12,8 @@ titreHtml: 'Statistiques | MesServicesCyber'
 
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
-    <h1>Nos statistiques</h1>
-    <p>L'impact de MesServicesCyber en quelques chiffres</p>
+    <h1 class="alternatif-xs-ns">Nos statistiques</h1>
+    <p class="texte-chapo-xl-ns">L'impact de MesServicesCyber en quelques chiffres</p>
   </div>
 </section>
 
