--- a/front/nis2.html
+++ b/front/nis2.html
@@ -25,8 +25,8 @@ titreHtml: 'Votre entité est régulée NIS2 ? | MesServicesCyber'
 <section class="chapeau fond-sombre nis2">
   <div class="contenu-section">
     <div id="fil-ariane"></div>
-    <h1>Votre entité est régulée NIS2&nbsp;?</h1>
-    <p>
+    <h1 class="alternatif-xs-ns">Votre entité est régulée NIS2&nbsp;?</h1>
+    <p class="texte-chapo-xl-ns">
       La directive NIS 2 vise à renforcer le niveau de cybersécurité des tissus
       économique et administratif des pays membres de l'UE. Découvrez les
       services et ressources pouvant accompagner les entités régulées par la
