[ACCUEIL v2] Intègre la demande de diagnostic

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -26,6 +26,12 @@ permalink: /accueil2/
   </div>
 </section>
 
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/demande-diagnostic.js"
+></script>
+
 <section class="organisations-concernees">
   <div class="contenu-section">
     <div class="toutes-organisations">
@@ -44,7 +50,7 @@ permalink: /accueil2/
         titre="Panorama de la menace 2024, ANSSI"
       ></lab-anssi-lien>
     </div>
-    <div class="demande-diag">
+    <div id="demande-diagnostic">
     </div>
     <div class="acces-catalogue">
       <h2>Accédez à un catalogue complet de ressources cyber proposées par l'ANSSI et ses partenaires</h2>
