[ACCUEIL v2] Affiche les sélections
 ...dans des cartes

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -57,6 +57,18 @@ permalink: /accueil2/
       <div class="selections">
         <p class="texte-detail-sm">Les sélections de l’ANSSI pour vous accompagner</p>
         <div class="caroussel-selections">
+          <dsfr-card title="Se lancer en cyber"
+                     description="Des services et ressources pour vous aider à mettre en œuvre des premières actions concrètes pour commencer à renforcer sa cybersécurité."
+                     href="/parcours-debuter"
+                     src="/assets/images/marelle-avec-bulle-fond-jaune.svg"></dsfr-card>
+          <dsfr-card title="Approfondir vos efforts"
+                     description="Des services et ressources pour aider votre organisation à approfondir la démarche de renforcement de la cybersécurité."
+                     href="/parcours-approfondir"
+                     src="/assets/images/jumelles-avec-bulle-fond-jaune.svg"></dsfr-card>
+          <dsfr-card title="Vous accompagner avec NIS2"
+                     description="Des services et ressources pouvant accompagner les entités régulées par la directive."
+                     href="/nis2"
+                     src="/assets/images/directive-nis2-avec-bulle-fond-jaune.svg"></dsfr-card>
 
         </div>
       </div>
